--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,9 @@ Desktop.ini
 # ESLint
 ######################
 .eslintcache
+
+#######################
+# Maven Modules target
+#######################
+/pet-clinic-data/target
+/pet-clinic-web/target
