--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -62,7 +62,12 @@
             <artifactId>junit-jupiter-engine</artifactId>
             <scope>test</scope>
         </dependency>
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>2.23.4</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- webjars -->
         <dependency>
@@ -129,7 +134,7 @@
                     <dependency>
                         <groupId>org.junit.platform</groupId>
                         <artifactId>junit-platform-surefire-provider</artifactId>
-                        <version>${junit-platform.version}</version>
+                        <version>1.3.2</version>
                     </dependency>
                 </dependencies>
             </plugin>
